Fixed: cursor: pointer was not in content-collapse btn.

--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@
   content: "\2610\ ";
 }
 
-.expandable-header {
+.expandable-header, .content-collapse {
     cursor: pointer;
 }
 
